Splitt nodes static and dynamic config in DispatchConfig to prepare for seamless cluster changes.